--- a/Readme
+++ b/Readme
@@ -1,4 +1,4 @@
-Ticket manager for [bukkit](http://dev.bukkit.org/profiles/jonneystechcheck/)
+Ticket manager plugin for bukkit - http://dev.bukkit.org/profiles/jonneystechcheck/
 
 Copyright [2014] [Jonathan Donaldson]
 
